--- a/src/pages/media/Media.module.scss
+++ b/src/pages/media/Media.module.scss
@@ -9,7 +9,10 @@
     flex-direction: column;
     justify-content: center;
     padding: var(--space-600) var(--space-400);
-    @include gap($column: var(--space-600));
+
+    @include mq(below, md) {
+      @include gap($column: var(--space-600));
+    }
 
     @include mq(above, md) {
       display: grid;
